syntax = "proto3";

message ClassMsg {
    string name = 3;
}