syntax = "proto3";
package inner;
message InnerMessage {
    int64 age = 2;
}